--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,34 @@ jobs:
       - checkout
       - run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/repo/.npmrc
       - install_bun
+      # SECURITY AUDIT
+      - run:
+          name: 'Security Audit - High Risk Vulnerabilities'
+          command: |
+            echo "🔍 Running bun audit for security vulnerabilities..."
+            echo "Checking for HIGH-RISK vulnerabilities..."
+
+            if bun audit --audit-level high; then
+              echo "✅ No high-risk vulnerabilities found"
+              echo "🎉 Security audit passed!"
+            else
+              echo ""
+              echo "❌ HIGH-RISK VULNERABILITIES DETECTED!"
+              echo "======================================"
+              echo ""
+              echo "🔧 To fix these issues:"
+              echo "  1. Run: bun audit"
+              echo "  2. Review the vulnerability details"
+              echo "  3. Update affected packages to secure versions"
+              echo "  4. Test your changes"
+              echo "  5. Re-run: bun audit --audit-level high"
+              echo ""
+              echo "📋 Full audit report:"
+              bun audit --audit-level low || true
+              echo ""
+              echo "❌ This build cannot proceed until high-risk vulnerabilities are resolved."
+              exit 1
+            fi
       - run: bun install
       - persist_to_workspace:
           root: ~/repo
