--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "preinstall": "node preinstall.js",
     "build": "echo 'build'",
-    "build:docs": "cd ../../ && yarn install && yarn run build:esm && cd packages/docs && cross-env NODE_OPTIONS=--max_old_space_size=32384 yarn run prep-examples && docusaurus build && node ./scripts/prepare-markdown-files.js && node ./scripts/generate-llms-txt.js && node ./scripts/generate-llms-full-txt.js && node ./scripts/generate-redirects.js",
+    "build:docs": "cd ../../ && yarn install --frozen-lockfile && yarn run build:esm && cd packages/docs && cross-env NODE_OPTIONS=--max_old_space_size=32384 yarn run prep-examples && docusaurus build && node ./scripts/prepare-markdown-files.js && node ./scripts/generate-llms-txt.js && node ./scripts/generate-llms-full-txt.js && node ./scripts/generate-redirects.js",
     "build:ci": "cross-env NODE_OPTIONS=--max_old_space_size=32384 yarn run prep-examples && docusaurus build && node ./scripts/prepare-markdown-files.js && node ./scripts/generate-llms-txt.js && node ./scripts/generate-llms-full-txt.js && node ./scripts/generate-redirects.js",
     "prepare-markdown-files": "node ./scripts/prepare-markdown-files.js",
     "generate-llms-txt": "node ./scripts/generate-llms-txt.js",
@@ -88,7 +88,7 @@
     "glob": "10.3.10",
     "karma-chrome-launcher": "3.1.0",
     "netlify-plugin-cache": "1.0.3",
-    "puppeteer": "13.1.3",
+    "puppeteer": "24.27.0",
     "shader-loader": "1.3.1",
     "typedoc": "0.26.10"
   }
