--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -91,5 +91,8 @@
     "puppeteer": "24.27.0",
     "shader-loader": "1.3.1",
     "typedoc": "0.26.10"
+  },
+  "resolutions": {
+    "node-forge": "1.3.2"
   }
 }
