--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -93,6 +93,7 @@
     "typedoc": "0.26.10"
   },
   "resolutions": {
-    "node-forge": "1.3.2"
+    "node-forge": "1.3.2",
+    "qs": "6.14.1"
   }
 }
