--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -94,6 +94,7 @@
   },
   "resolutions": {
     "node-forge": "1.3.2",
-    "qs": "6.14.1"
+    "qs": "6.14.1",
+    "mdast-util-to-hast": "13.2.1"
   }
 }
