--- a/package.json
+++ b/package.json
@@ -202,6 +202,7 @@
     "tar-fs": "2.1.4",
     "body-parser": "1.20.3",
     "ws": "8.18.3",
-    "qs": "6.14.1"
+    "qs": "6.14.1",
+    "tar": "7.5.3"
   }
 }
